--- a/shell/git/gituser.example
+++ b/shell/git/gituser.example
@@ -1,13 +1,10 @@
 ###########
 #  ~/.gitconfig
-#  Write all your personal git config you don't want to keep versioned
+#  Your personal git config that you don't want to keep versioned
 ###########
 
-# --------------------------------
-# ACCOUNT
-# --------------------------------
 
 [user]
     name = John Doe
     email = johndoe@domain.tld
-
+    username = johndoe
