--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,9 @@ app/apache2/indexv/*
 *.sublime-color-scheme
 *.tmTheme
 
+# /app/visual-studio-code
+app/visual-studio-code/globalStorage/*
+app/visual-studio-code/workspaceStorage/*
+
 # /shell/git
 shell/git/gituser
