Update basic visual-studio-code settings

--- a/app/visual-studio-code/settings.json
+++ b/app/visual-studio-code/settings.json
@@ -1,27 +1,113 @@
 {
-    "telemetry.enableTelemetry": false,
-    "files.insertFinalNewline": true,
+    // Text Editor
+    "editor.autoClosingBrackets": "always",
+    "editor.autoClosingQuotes": "always",
+    "editor.codeActionsOnSave": {
+        "source.fixAll": true
+    },
     "editor.fontSize": 14,
-    "editor.tabSize": 4,
-    "files.trimTrailingWhitespace": true,
-    "editor.multiCursorModifier": "ctrlCmd",
-    "editor.snippetSuggestions": "top",
-    "workbench.colorTheme": "Monokai",
-    "files.autoSave": "afterDelay",
-    "files.autoSaveDelay": 60000,
-    "update.enableWindowsBackgroundUpdates": false,
-    "extensions.autoCheckUpdates": false,
-    "extensions.autoUpdate": false,
-    "AllAutocomplete.updateOnlyOnSave": true,
-    "update.mode": "manual",
-    "comments.openPanel": "neverOpen",
-    "workbench.editor.highlightModifiedTabs": true,
-    "autoimport.filesToScan": "**/*.{ts,tsx}, node_modules/**/*.{js}",
     "editor.renderWhitespace": "boundary",
     "editor.tabCompletion": "on",
-    "editor.insertSpaces": false,
-    "search.globalFindClipboard": true,
-    "workbench.settings.enableNaturalLanguageSearch": false,
+    "editor.wordWrap": "on",
+    "editor.find.addExtraSpaceOnTop": false,
+    "editor.find.globalFindClipboard": true,
+    "editor.minimap.showSlider": "always",
+    "editor.quickSuggestions": {
+        "other": true,
+        "comments": true,
+        "strings": true
+    },
+    "editor.suggestFontSize": 12,
+    "editor.suggest.maxVisibleSuggestions": 10,
+    "files.autoSave": "afterDelay",
+    "files.autoSaveDelay": 5000,
+    "files.defaultLanguage": "${activeEditorLanguage}",
+    "files.insertFinalNewline": true,
+    "files.trimTrailingWhitespace": true,
+    "files.watcherExclude": {
+        "**/bower_components/**": true,
+        "**/vendor/**": true
+    },
+    // Workbench
+    "workbench.colorTheme": "Monokai",
+    "workbench.enableExperiments": false,
+    "workbench.startupEditor": "none",
+    "workbench.editor.highlightModifiedTabs": true,
+    "workbench.editor.tabSizing": "shrink",
+    "workbench.settings.openDefaultKeybindings": true,
+    "workbench.settings.openDefaultSettings": true,
+    "workbench.tree.indent": 10,
+    "workbench.tree.renderIndentGuides": "always",
+    "workbench.view.alwaysShowHeaderActions": true,
+    "screencastMode.onlyKeyboardShortcuts": true,
+    // Window
+    "window.restoreWindows": "one",
+    "window.title": "${rootName}${separator}${activeEditorShort}",
+    // Features
+    "search.enableSearchEditorPreview": true,
+    "search.exclude": {
+        "**/.git": true
+    },
+    "search.showLineNumbers": true,
     "search.smartCase": true,
-    "search.useIgnoreFiles": false
+    "search.useIgnoreFiles": false,
+    "extensions.ignoreRecommendations": true,
+    "problems.showCurrentInStatus": true,
+    "comments.openPanel": "neverOpen",
+    // Applications
+    "update.mode": "start",
+    // Extensions (Default)
+    "css.lint.argumentsInColorFunction": "warning",
+    "css.lint.boxModel": "warning",
+    "css.lint.compatibleVendorPrefixes": "warning",
+    "css.lint.duplicateProperties": "warning",
+    "css.lint.hexColorLength": "warning",
+    "css.lint.idSelector": "warning",
+    "css.lint.ieHack": "warning",
+    "css.lint.important": "warning",
+    "css.lint.importStatement": "warning",
+    "css.lint.universalSelector": "warning",
+    "css.lint.unknownVendorSpecificProperties": "warning",
+    "css.lint.zeroUnits": "warning",
+    "emmet.excludeLanguages": [
+        "markdown"
+    ],
+    "emmet.triggerExpansionOnTab": true,
+    "git.branchSortOrder": "alphabetically",
+    "git.countBadge": "off",
+    "git.enableStatusBarSync": false,
+    "html.format.endWithNewline": true,
+    "html.format.indentHandlebars": true,
+    "html.format.indentInnerHtml": true,
+    "jake.autoDetect": "off",
+    "less.lint.argumentsInColorFunction": "warning",
+    "less.lint.boxModel": "warning",
+    "less.lint.compatibleVendorPrefixes": "warning",
+    "less.lint.duplicateProperties": "warning",
+    "less.lint.hexColorLength": "warning",
+    "less.lint.idSelector": "warning",
+    "less.lint.ieHack": "warning",
+    "less.lint.important": "warning",
+    "less.lint.importStatement": "warning",
+    "less.lint.universalSelector": "warning",
+    "less.lint.unknownVendorSpecificProperties": "warning",
+    "less.lint.zeroUnits": "warning",
+    "merge-conflict.autoNavigateNextConflict.enabled": true,
+    "npm.enableRunFromFolder": true,
+    "php.validate.executablePath": "/usr/local/php5/bin/php",
+    "php.validate.run": "onType",
+    "scss.lint.argumentsInColorFunction": "warning",
+    "scss.lint.boxModel": "warning",
+    "scss.lint.compatibleVendorPrefixes": "warning",
+    "scss.lint.duplicateProperties": "warning",
+    "scss.lint.hexColorLength": "warning",
+    "scss.lint.idSelector": "warning",
+    "scss.lint.ieHack": "warning",
+    "scss.lint.important": "warning",
+    "scss.lint.importStatement": "warning",
+    "scss.lint.universalSelector": "warning",
+    "scss.lint.unknownVendorSpecificProperties": "warning",
+    "scss.lint.zeroUnits": "warning",
+    "javascript.preferences.quoteStyle": "single",
+    "typescript.preferences.quoteStyle": "single"
 }
