--- a/app/visual-studio-code/settings.json
+++ b/app/visual-studio-code/settings.json
@@ -147,6 +147,11 @@
     "php-docblocker.returnVoid": false,
     "php-docblocker.useShortNames": true,
     "php.validate.enable": false,
+    "prettier.jsxSingleQuote": true,
+    "prettier.printWidth": 100,
+    "prettier.singleQuote": true,
+    "prettier.tabWidth": 4,
+    "prettier.vueIndentScriptAndStyle": true,
     "stylelint.reportNeedlessDisables": true,
     "vs-docblockr.phpMixedUnionTypes": true
 }
