Upadte vscode settings

--- a/app/visual-studio-code/settings.json
+++ b/app/visual-studio-code/settings.json
@@ -2,20 +2,24 @@
     // Text Editor
     "editor.autoClosingBrackets": "always",
     "editor.autoClosingQuotes": "always",
-    "editor.fontSize": 13,
+    "editor.codeActionsOnSave": {
+        "source.fixAll": false,
+        "source.fixAll.stylelint": true,
+        "source.fixAll.eslint": true
+    },
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.renderWhitespace": "boundary",
     "editor.tabCompletion": "on",
     "editor.wordWrap": "on",
     "editor.find.addExtraSpaceOnTop": false,
     "editor.find.globalFindClipboard": true,
-    "editor.minimap.showSlider": "always",
+    "editor.fontSize": 13,
+    "editor.formatOnSave": true,
     "editor.quickSuggestions": {
         "other": true,
         "comments": true,
         "strings": true
     },
-    "editor.suggestFontSize": 12,
-    "editor.suggest.maxVisibleSuggestions": 10,
     "files.defaultLanguage": "${activeEditorLanguage}",
     "files.insertFinalNewline": true,
     "files.trimTrailingWhitespace": true,
@@ -25,19 +29,17 @@
         "**/vendor/**": true
     },
     // Workbench
-    "workbench.colorTheme": "Monokai",
     "workbench.enableExperiments": false,
     "workbench.startupEditor": "none",
-    "workbench.editor.highlightModifiedTabs": true,
-    "workbench.editor.tabSizing": "shrink",
+    "workbench.colorTheme": "Monokai",
     "workbench.tree.indent": 10,
     "workbench.tree.renderIndentGuides": "always",
     "workbench.view.alwaysShowHeaderActions": true,
-    "screencastMode.onlyKeyboardShortcuts": true,
+    "workbench.editor.highlightModifiedTabs": true,
     // Window
+    "window.nativeTabs": true,
     "window.restoreWindows": "one",
     "window.title": "${rootName}${separator}${activeEditorShort}",
-    "window.nativeTabs": true,
     // Features
     "search.exclude": {
         "**/.git": true,
@@ -48,11 +50,12 @@
     "search.smartCase": true,
     "search.useIgnoreFiles": false,
     "extensions.ignoreRecommendations": true,
-    "problems.showCurrentInStatus": true,
     "comments.openPanel": "neverOpen",
-    // Applications
+    // Application
     "update.mode": "start",
-    // Extensions (Default)
+    // Extensions
+    "autoimport.filesToScan": "./**/*.{ts,tsx,js,jsx}",
+    "color-highlight.matchWords": true,
     "css.lint.argumentsInColorFunction": "warning",
     "css.lint.boxModel": "warning",
     "css.lint.compatibleVendorPrefixes": "warning",
@@ -65,14 +68,15 @@
     "css.lint.universalSelector": "warning",
     "css.lint.unknownVendorSpecificProperties": "warning",
     "css.lint.zeroUnits": "warning",
+    "css.validate": false,
     "emmet.triggerExpansionOnTab": true,
-    "git.branchSortOrder": "alphabetically",
-    "git.countBadge": "off",
+    "eslint.alwaysShowStatus": true,
+    "eslint.format.enable": true,
     "git.enableStatusBarSync": false,
     "html.format.endWithNewline": true,
     "html.format.indentHandlebars": true,
     "html.format.indentInnerHtml": true,
-    "jake.autoDetect": "off",
+    "javascript.preferences.quoteStyle": "single",
     "less.lint.argumentsInColorFunction": "warning",
     "less.lint.boxModel": "warning",
     "less.lint.compatibleVendorPrefixes": "warning",
@@ -85,9 +89,18 @@
     "less.lint.universalSelector": "warning",
     "less.lint.unknownVendorSpecificProperties": "warning",
     "less.lint.zeroUnits": "warning",
-    "merge-conflict.autoNavigateNextConflict.enabled": true,
-    "npm.enableRunFromFolder": true,
-    "php.validate.executablePath": "/usr/local/php5/bin/php",
+    "less.validate": false,
+    "path-autocomplete.extensionOnImport": true,
+    "path-autocomplete.triggerOutsideStrings": true,
+    "php.validate.executablePath": "/usr/bin/php",
+    "prettier.configPath": ".prettierrc",
+    "prettier.endOfLine": "lf",
+    "prettier.jsxSingleQuote": true,
+    "prettier.printWidth": 120,
+    "prettier.requireConfig": true,
+    "prettier.singleQuote": true,
+    "prettier.tabWidth": 4,
+    "prettier.vueIndentScriptAndStyle": true,
     "scss.lint.argumentsInColorFunction": "warning",
     "scss.lint.boxModel": "warning",
     "scss.lint.compatibleVendorPrefixes": "warning",
@@ -100,62 +113,7 @@
     "scss.lint.universalSelector": "warning",
     "scss.lint.unknownVendorSpecificProperties": "warning",
     "scss.lint.zeroUnits": "warning",
-    "javascript.preferences.quoteStyle": "single",
-    "typescript.preferences.quoteStyle": "single",
-    // Extensions (Installed - Adjust Base)
-    "css.validate": false,
-    "less.validate": false,
     "scss.validate": false,
-    "php.validate.enable": false,
-    "php.suggest.basic": false,
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "[php]": {
-        "editor.defaultFormatter": "junstyle.php-cs-fixer"
-    },
-    "editor.codeActionsOnSave": {
-        "source.fixAll": false,
-        "source.fixAll.stylelint": true,
-        "source.fixAll.eslint": true
-    },
-    // Extensions (Installed)
-    "AllAutocomplete.cycleOpenDocumentsOnLaunch": true,
-    "AllAutocomplete.maxItemsInSingleList": 500,
-    "AllAutocomplete.maxLines": 5000,
-    "AllAutocomplete.updateOnlyOnSave": true,
-    "autoimport.filesToScan": "./**/*.{ts,tsx,js,jsx}",
-    "autoimport.showNotifications": true,
-    "color-highlight.matchWords": true,
-    "fileutils.delete.useTrash": true,
-    "intelephense.environment.phpVersion": "7.2.9",
-    "intelephense.files.exclude": [
-        "**/.git/**",
-        "**/.svn/**",
-        "**/.hg/**",
-        "**/CVS/**",
-        "**/.DS_Store/**",
-        "**/node_modules/**",
-        "**/bower_components/**",
-        "**/vendor/**/{Tests,tests,Test,test}/**"
-    ],
-    "intelephense.phpdoc.returnVoid": false,
-    "intelephense.rename.exclude": ["**/vendor/**", "**/node_modules/**"],
-    "path-autocomplete.extensionOnImport": true,
-    "path-autocomplete.triggerOutsideStrings": true,
-    "php.executablePath": "/usr/local/php5/bin/php",
-    "php-cs-fixer.rules": "@PSR1, @PSR2, @Symfony",
-    //
-    "prettier.endOfLine": "lf",
-    "prettier.jsxSingleQuote": true,
-    "prettier.printWidth": 120,
-    "prettier.requireConfig": true,
-    "prettier.singleQuote": true,
-    "prettier.tabWidth": 4,
-    "prettier.vueIndentScriptAndStyle": true,
-    "eslint.alwaysShowStatus": true,
-    "eslint.format.enable": true,
     "stylelint.reportNeedlessDisables": true,
-    "prettier.configPath": ".prettierrc",
-    "editor.formatOnSave": true,
-    "php-cs-fixer.executablePath": "${extensionPath}/php-cs-fixer.phar",
-    "todo-tree.tree.showScanModeButton": false
+    "typescript.preferences.quoteStyle": "single",
 }
